--- a/app/src/main/res/layout/activity_wallet_pay.xml
+++ b/app/src/main/res/layout/activity_wallet_pay.xml
@@ -6,14 +6,14 @@
               android:layout_height="match_parent"
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
-              tools:context=".cashIn">
+              tools:context=".WalletPay">
 
     <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:theme="?attr/actionBarTheme"
-            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar6" app:title="Cash in"
+            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar22" app:title="Wallet Pay"
             app:titleTextColor="#F9F9F9"/>
     <androidx.core.widget.NestedScrollView
             android:id="@+id/nested_scroll_view"
@@ -29,29 +29,12 @@
                 android:orientation="vertical">
 
 
-            <!--<androidx.cardview.widget.CardView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_margin="20dp"-->
-            <!--card_view:cardElevation="8dp"-->
-            <!--app:cardCornerRadius="5dp"-->
-            <!--android:background="#ffffff">-->
 
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:orientation="horizontal">
-
-                <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="81dp"
-                        android:src="@drawable/transference"
-                        tools:srcCompat="@drawable/transference" android:contentDescription="@string/page_logo"
-                        android:padding="15dp"/>
-
-
-            </LinearLayout>
+                    android:orientation="horizontal"/>
             <!--</androidx.cardview.widget.CardView>-->
 
             <androidx.cardview.widget.CardView
@@ -71,73 +54,27 @@
                 >
 
                     <TextView
-                            android:text="@string/amount"
+                            android:text="@string/phone_number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" android:id="@+id/textView2"
                             android:textAlignment="center" android:textStyle="bold" android:textSize="18sp"
                             android:textColor="@android:color/black"/>
                     <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" android:id="@+id/amountLayoutCI"
+                            android:layout_height="match_parent" android:id="@+id/phoneLayoutWP"
                             app:hintAnimationEnabled="false" app:hintEnabled="false" android:animationCache="false"
                             android:animateLayoutChanges="false">
 
                         <com.google.android.material.textfield.TextInputEditText
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:hint="@string/amount" android:inputType="number|numberDecimal"
+                                android:hint="9XXXXXXXXX" android:inputType="number|numberDecimal"
                                 android:textSize="14sp"/>
                     </com.google.android.material.textfield.TextInputLayout>
-                    <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal" android:baselineAligned="false">
-
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="3"
-                                android:layout_gravity="center"
-                                android:layout_marginStart="18dp"
-                                android:background="@drawable/round_border"/>
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="3"
-                                android:layout_gravity="center"
-                                android:layout_marginStart="10dp"
-                                android:background="@drawable/round_border"/>
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginEnd="18dp"
-                                android:layout_marginStart="10dp"
-                                android:layout_weight="3"
-                                android:background="@drawable/round_border"/>
-
-                    </LinearLayout>
 
                     <View
                             android:layout_width="0dp"
                             android:layout_height="@dimen/spacing_smlarge"/>
-
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/spacing_middle"
-                            android:text="@string/payment_options"
-                            android:textAlignment="center"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                            android:textColor="@color/grey_90"
-                            android:textStyle="bold"/>
-
-                    <Spinner
-                            android:id="@+id/paymentMethodSpinner"
-                            android:layout_width="match_parent"
-                            android:layout_height="55dp"
-                            android:layout_gravity="center"
-                            android:entries="@array/payment_method"
-                            android:prompt="@string/payment_method_prompt"/>
 
                     <Button
                             android:layout_width="match_parent"
@@ -151,7 +88,7 @@
                             android:layout_gravity="center"
                             android:background="@drawable/rounded_button"
                             android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp" android:id="@+id/proceedCashIn"/>
+                            android:layout_marginRight="20dp" android:id="@+id/proceedWP"/>
 
                     <Button
                             android:id="@+id/button"
