--- a/app/src/main/res/layout/activity_customs.xml
+++ b/app/src/main/res/layout/activity_customs.xml
@@ -7,4 +7,27 @@
         android:layout_height="match_parent"
         tools:context=".Customs">
 
+    <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="344dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:hintAnimationEnabled="false" app:hintEnabled="false"
+            android:id="@+id/textInputLayout">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="999999999999" android:textColorLink="@color/light_blue_700"
+                android:textColorHighlight="@color/light_blue_700"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <TextView
+            android:text="@string/phone_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/textInputLayout" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" tools:text="@string/phone_number"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
