--- a/app/src/main/res/layout/activity_purchase.xml
+++ b/app/src/main/res/layout/activity_purchase.xml
@@ -2,36 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
               android:orientation="vertical"
               tools:context="com.example.primepay.ui.Purchase">
 
-    <include layout="@layout/toolbar" />
 
-
+    <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:theme="?attr/actionBarTheme"
+            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar3" app:title="@string/purchase"
+            app:titleTextColor="#F9F9F9"/>
     <androidx.core.widget.NestedScrollView
             android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:scrollbars="none"
             android:scrollingCache="true">
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/background"
-            android:orientation="vertical">
-
-
-        <androidx.cardview.widget.CardView
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                card_view:cardElevation="8dp"
-                app:cardCornerRadius="5dp"
-                android:background="#ffffff">
+                android:layout_height="match_parent"
+                android:background="@color/background"
+                android:orientation="vertical" android:padding="10dp">
+
 
             <LinearLayout
                     android:layout_width="match_parent"
@@ -42,142 +39,105 @@
                 <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="81dp"
-                        android:src="@drawable/ic_cash"
-                />
+                        android:src="@drawable/cashier"
+                        android:padding="15dp"/>
 
 
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                app:cardCornerRadius="5dp"
-                card_view:cardElevation="9dp"
-                android:layout_marginRight="20dp"
-
-                android:background="@drawable/round_border">
-
-            <LinearLayout
+            <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_marginLeft="20dp"
+                    app:cardCornerRadius="5dp"
+                    card_view:cardElevation="9dp"
+                    android:layout_marginRight="20dp"
 
+                    android:background="@drawable/round_border">
 
                 <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="18dp"
-                        android:layout_marginRight="18dp"
-                        android:layout_marginTop="18dp"
-                        android:background="@drawable/round_border">
+                        android:layout_height="match_parent"
+                        android:orientation="vertical" android:padding="15dp">
 
-                    <com.google.android.material.textfield.TextInputEditText
+
+                    <TextView
+                            android:text="@string/amount"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" android:id="@+id/textView3"
+                            android:textAlignment="center" android:textColor="@android:color/black"
+                            android:textStyle="bold" android:textSize="18sp"/>
+                    <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" android:animateLayoutChanges="false"
+                            android:animationCache="false" app:hintAnimationEnabled="false"
+                            app:hintEnabled="false" android:id="@+id/purcheseAmount">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/amount" android:textColorLink="@color/light_blue_700"
+                                android:textColorHighlight="@color/light_blue_700" android:inputType="number"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <View
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/spacing_smlarge"/>
+
+                    <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="#00000000"
-                            android:hint="Amount"
+                            android:layout_margin="@dimen/spacing_middle"
+                            android:text="Payment Options"
+                            android:textAlignment="center"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                            android:textColor="@color/grey_90"
+                            android:textStyle="bold"/>
+                    <Spinner
+                            android:id="@+id/paymentMethodSpinner"
+                            android:layout_width="match_parent"
+                            android:layout_height="43dp"
+                            android:layout_gravity="center"
+                            android:entries="@array/payment_method"
+                            android:prompt="@string/payment_method_prompt"/>
+
+                    <Button
+                            android:id="@+id/purcheseProceed"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Proceed"
+                            android:textAllCaps="false"
+                            android:layout_marginTop="30dp"
+                            android:textColor="#ffffff"
                             android:padding="15dp"
-                            android:textSize="13dp"/>
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:background="@drawable/rounded_button"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"/>
+
+                    <Button
+                            android:id="@+id/button"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Back"
+                            android:padding="15dp"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:background="@drawable/rounded_button2"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:textAllCaps="false"
+                            android:layout_marginBottom="20dp"
+                    />
+
 
                 </LinearLayout>
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="18dp"
-                        android:background="@drawable/round_border"/>
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                    <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="18dp"
-                            android:background="@drawable/round_border"/>
-                    <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="10dp"
-                            android:background="@drawable/round_border"/>
-                    <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="18dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_weight="3"
-                            android:background="@drawable/round_border"/>
-
-                </LinearLayout>
-
-                <View
-                        android:layout_width="0dp"
-                        android:layout_height="@dimen/spacing_smlarge"/>
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/spacing_middle"
-                        android:text="Payment Options"
-                        android:textAlignment="center"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                        android:textColor="@color/grey_90"
-                        android:textStyle="bold"/>
-
-                <Spinner
-                        android:id="@+id/paymentMethodSpinner"
-                        android:layout_width="match_parent"
-                        android:layout_height="70dp"
-                        android:layout_gravity="center"
-                        android:entries="@array/payment_method"
-                        android:prompt="@string/payment_method_prompt"/>
-
-                <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Proceed"
-                        android:textAllCaps="false"
-                        android:layout_marginTop="30dp"
-                        android:textColor="#ffffff"
-                        android:padding="15dp"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        android:background="@drawable/rounded_button"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"/>
-
-                <Button
-                        android:id="@+id/button"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Back"
-                        android:padding="15dp"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        android:background="@drawable/rounded_button2"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:textAllCaps="false"
-                        android:layout_marginBottom="20dp"
-                />
+            </androidx.cardview.widget.CardView>
 
 
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-
-
-    </LinearLayout>
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
