--- a/app/src/main/res/layout/activity_purchese_cash_back.xml
+++ b/app/src/main/res/layout/activity_purchese_cash_back.xml
@@ -6,30 +6,35 @@
               android:layout_height="match_parent"
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
-              tools:context="com.example.primepay.ui.Purchase">
+              tools:context=".purcheseCashBack">
 
-    <include layout="@layout/toolbar" />
-
+    <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:theme="?attr/actionBarTheme"
+            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar2" app:title="Purchase with cash back"
+            app:titleTextColor="#F9F9F9"/>
     <androidx.core.widget.NestedScrollView
             android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="none"
             android:scrollingCache="true">
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/background"
-            android:orientation="vertical">
-
-
-        <androidx.cardview.widget.CardView
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                card_view:cardElevation="8dp"
-                app:cardCornerRadius="5dp"
-                android:background="#ffffff">
+                android:layout_height="match_parent"
+                android:background="@color/background"
+                android:orientation="vertical">
+
+
+            <!--<androidx.cardview.widget.CardView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="20dp"-->
+            <!--card_view:cardElevation="8dp"-->
+            <!--app:cardCornerRadius="5dp"-->
+            <!--android:background="@color/background">-->
 
             <LinearLayout
                     android:layout_width="match_parent"
@@ -41,169 +46,115 @@
                         android:layout_width="match_parent"
                         android:layout_height="81dp"
                         android:src="@drawable/dive"
-                        tools:srcCompat="@drawable/dive" android:contentDescription="@string/page_logo"/>
+                        tools:srcCompat="@drawable/dive" android:contentDescription="@string/page_logo"
+                        android:padding="15dp"/>
 
 
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+            <!--</androidx.cardview.widget.CardView>-->
 
-        <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                app:cardCornerRadius="5dp"
-                card_view:cardElevation="9dp"
-                android:layout_marginRight="20dp"
-
-                android:background="@drawable/round_border">
-
-            <LinearLayout
+            <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_marginLeft="20dp"
+                    app:cardCornerRadius="5dp"
+                    card_view:cardElevation="9dp"
+                    android:layout_marginRight="20dp"
 
-                <TextView
-                        android:text="@string/amount"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" android:id="@+id/textView"
-                        android:textAppearance="@style/TextAppearance.Medium.Bold"/>
+                    android:background="@drawable/round_border">
+
                 <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="18dp"
-                        android:layout_marginRight="18dp"
-                        android:layout_marginTop="18dp"
-                        android:background="@drawable/round_border">
+                        android:orientation="vertical" android:padding="15dp">
 
-                    <com.google.android.material.textfield.TextInputEditText
+
+                    <TextView
+                            android:text="@string/amount"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" android:id="@+id/textView6"
+                            android:textAlignment="center" android:textColor="@android:color/black"
+                            android:textSize="18sp" android:textStyle="bold"/>
+                    <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" app:hintAnimationEnabled="false"
+                            app:hintEnabled="false" android:id="@+id/amountLayoutPCB">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/amount" android:inputType="number|numberDecimal"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+                    <TextView
+                            android:text="@string/back_amount"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" android:id="@+id/textView7"
+                            android:textColor="@android:color/black" android:textStyle="bold"
+                            android:textAlignment="center"/>
+                    <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" app:hintAnimationEnabled="false"
+                            app:hintEnabled="false" android:id="@+id/backamountLayoutPCB">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/back_amount" android:inputType="number|numberDecimal"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+                    <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="#00000000"
-                            android:hint="@string/amount"
-                            android:padding="15dp"
-                            android:textSize="14sp"/>
+                            android:layout_margin="@dimen/spacing_middle"
+                            android:text="@string/payment_options"
+                            android:textAlignment="center"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                            android:textColor="@color/grey_90"
+                            android:textStyle="bold"/>
 
-                </LinearLayout>
-
-
-                <TextView
-                        android:text="@string/back_amount"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:textAppearance="@style/TextAppearance.Medium.Bold"/>
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="18dp"
-                        android:layout_marginRight="18dp"
-                        android:layout_marginTop="18dp"
-                        android:background="@drawable/round_border">
-
-                    <com.google.android.material.textfield.TextInputEditText
+                    <Spinner
+                            android:id="@+id/paymentMethodSpinner"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="#00000000"
-                            android:hint="@string/back_amount"
-                            android:padding="15dp"
-                            android:textSize="14sp"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="18dp"
-                        android:background="@drawable/round_border"/>
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal" android:baselineAligned="false">
-
-                    <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
+                            android:layout_height="47dp"
                             android:layout_gravity="center"
-                            android:layout_marginStart="18dp"
-                            android:background="@drawable/round_border"/>
-                    <LinearLayout
+                            android:entries="@array/payment_method"
+                            android:prompt="@string/payment_method_prompt"/>
+
+                    <Button
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="3"
+                            android:text="@string/proceed"
+                            android:textAllCaps="false"
+                            android:layout_marginTop="30dp"
+                            android:textColor="#ffffff"
+                            android:padding="15dp"
+                            android:gravity="center"
                             android:layout_gravity="center"
-                            android:layout_marginStart="10dp"
-                            android:background="@drawable/round_border"/>
-                    <LinearLayout
+                            android:background="@drawable/rounded_button"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp" android:id="@+id/proceedPCB"/>
+
+                    <Button
+                            android:id="@+id/button"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="18dp"
-                            android:layout_marginStart="10dp"
-                            android:layout_weight="3"
-                            android:background="@drawable/round_border"/>
+                            android:text="@string/back"
+                            android:padding="15dp"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:background="@drawable/rounded_button2"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:textAllCaps="false"
+                            android:layout_marginBottom="20dp"
+                    />
+
 
                 </LinearLayout>
-
-                <View
-                        android:layout_width="0dp"
-                        android:layout_height="@dimen/spacing_smlarge"/>
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/spacing_middle"
-                        android:text="@string/payment_options"
-                        android:textAlignment="center"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                        android:textColor="@color/grey_90"
-                        android:textStyle="bold"/>
-
-                <Spinner
-                        android:id="@+id/paymentMethodSpinner"
-                        android:layout_width="match_parent"
-                        android:layout_height="70dp"
-                        android:layout_gravity="center"
-                        android:entries="@array/payment_method"
-                        android:prompt="@string/payment_method_prompt"/>
-
-                <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/proceed"
-                        android:textAllCaps="false"
-                        android:layout_marginTop="30dp"
-                        android:textColor="#ffffff"
-                        android:padding="15dp"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        android:background="@drawable/rounded_button"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"/>
-
-                <Button
-                        android:id="@+id/button"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/back"
-                        android:padding="15dp"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        android:background="@drawable/rounded_button2"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:textAllCaps="false"
-                        android:layout_marginBottom="20dp"
-                />
+            </androidx.cardview.widget.CardView>
 
 
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-
-
-    </LinearLayout>
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
