--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,10 @@
 
     <style name="BaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+
+        <item name="colorControlNormal">#c5c5c5</item>
+        <item name="colorControlActivated">@color/light_blue_700</item>
+        <item name="colorControlHighlight">@color/light_blue_700</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -152,8 +156,8 @@
     </style>
 
     <!-- Base application theme. -->
-
     <style name="HintText">
+
         <item name="android:paddingBottom">8dp</item>
     </style>
 
