--- a/app/src/main/res/layout/activity_card_transfer.xml
+++ b/app/src/main/res/layout/activity_card_transfer.xml
@@ -15,146 +15,123 @@
             android:theme="?attr/actionBarTheme"
             android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar8" app:title="@string/card_transfer"
             app:subtitleTextColor="#FDFDFE" app:titleTextColor="#F9F9F9"/>
-    <androidx.core.widget.NestedScrollView
-            android:id="@+id/nested_scroll_view"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="none"
-            android:scrollingCache="true">
+            android:background="@color/background"
+            android:orientation="vertical">
+
+
+        <!--<androidx.cardview.widget.CardView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_margin="20dp"-->
+        <!--card_view:cardElevation="8dp"-->
+        <!--app:cardCornerRadius="5dp"-->
+        <!--android:background="#ffffff">-->
+
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/background"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="81dp"
+                    android:src="@drawable/history"
+                    tools:srcCompat="@drawable/history" android:contentDescription="@string/page_logo"
+                    android:padding="15dp"/>
 
 
-            <!--<androidx.cardview.widget.CardView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_margin="20dp"-->
-            <!--card_view:cardElevation="8dp"-->
-            <!--app:cardCornerRadius="5dp"-->
-            <!--android:background="#ffffff">-->
+        </LinearLayout>
+        <!--</androidx.cardview.widget.CardView>-->
+
+        <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                app:cardCornerRadius="5dp"
+                android:layout_marginRight="20dp"
+
+                android:background="@drawable/round_border">
 
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical" android:padding="15dp">
 
-                <ImageView
+
+                <TextView
+                        android:text="@string/reciver_card_number"
                         android:layout_width="match_parent"
-                        android:layout_height="81dp"
-                        android:src="@drawable/history"
-                        tools:srcCompat="@drawable/history" android:contentDescription="@string/page_logo"
-                        android:padding="15dp"/>
+                        android:layout_height="wrap_content" android:id="@+id/textView4"
+                        android:textColor="@android:color/black" android:textSize="18sp"
+                        android:textAlignment="center" android:textStyle="bold"/>
+
+                <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" app:hintAnimationEnabled="false"
+                        app:hintEnabled="false" android:animateLayoutChanges="false" android:animationCache="false"
+                        android:id="@+id/cardNumberLayoutCT">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/reciver_card_number" android:inputType="number"/>
+                </com.google.android.material.textfield.TextInputLayout>
+                <TextView
+                        android:text="@string/amount"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" android:id="@+id/textView5"
+                        android:textColor="@android:color/black" android:textAlignment="center"
+                        android:textStyle="bold" android:textSize="18sp"/>
+                <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" app:hintAnimationEnabled="false"
+                        android:animateLayoutChanges="false" android:animationCache="false"
+                        android:id="@+id/amountLayoutCT">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/amount" android:inputType="number|numberDecimal"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/proceed"
+                        android:textAllCaps="false"
+                        android:layout_marginTop="30dp"
+                        android:textColor="#ffffff"
+                        android:padding="15dp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:background="@drawable/rounded_button"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp" android:id="@+id/proceedCardTransfer"/>
+                <Button
+                        android:id="@+id/backBbuttonCT"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/back"
+                        android:padding="15dp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:background="@drawable/rounded_button2"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:textAllCaps="false"
+                        android:layout_marginBottom="20dp"
+                />
 
 
             </LinearLayout>
-            <!--</androidx.cardview.widget.CardView>-->
-
-            <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    app:cardCornerRadius="5dp"
-                    android:layout_marginRight="20dp"
-
-                    android:background="@drawable/round_border">
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical" android:padding="15dp">
+        </androidx.cardview.widget.CardView>
 
 
-                    <TextView
-                            android:text="@string/reciver_card_number"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" android:id="@+id/textView4"
-                            android:textColor="@android:color/black" android:textSize="18sp"
-                            android:textAlignment="center" android:textStyle="bold"/>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" app:hintAnimationEnabled="false"
-                            app:hintEnabled="false" android:animateLayoutChanges="false" android:animationCache="false"
-                            android:id="@+id/cardNumberLayoutCT">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/reciver_card_number" android:inputType="number"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-                    <TextView
-                            android:text="@string/amount"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" android:id="@+id/textView5"
-                            android:textColor="@android:color/black" android:textAlignment="center"
-                            android:textStyle="bold" android:textSize="18sp"/>
-                    <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" app:hintAnimationEnabled="false"
-                            android:animateLayoutChanges="false" android:animationCache="false"
-                            android:id="@+id/amountLayoutCT">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/amount" android:inputType="number|numberDecimal"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/spacing_middle"
-                            android:text="@string/payment_options"
-                            android:textAlignment="center"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                            android:textColor="@color/grey_90"
-                            android:textStyle="bold"/>
-                    <Spinner
-                            android:id="@+id/paymentMethodSpinner"
-                            android:layout_width="match_parent"
-                            android:layout_height="47dp"
-                            android:layout_gravity="center"
-                            android:entries="@array/payment_method"
-                            android:prompt="@string/payment_method_prompt"/>
-
-                    <Button
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/proceed"
-                            android:textAllCaps="false"
-                            android:layout_marginTop="30dp"
-                            android:textColor="#ffffff"
-                            android:padding="15dp"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:background="@drawable/rounded_button"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp" android:id="@+id/proceedCardTransfer"/>
-                    <Button
-                            android:id="@+id/button"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/back"
-                            android:padding="15dp"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:background="@drawable/rounded_button2"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp"
-                            android:textAllCaps="false"
-                            android:layout_marginBottom="20dp"
-                    />
-
-
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    </LinearLayout>
 
 </LinearLayout>
