--- a/app/src/main/res/layout/activity_dash.xml
+++ b/app/src/main/res/layout/activity_dash.xml
@@ -11,7 +11,6 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:contentInsetStartWithNavigation="0dp"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:theme="@style/Toolbar.Light"
             app:titleTextColor="#FDFDFE"
@@ -81,7 +80,7 @@
                                 android:padding="@dimen/spacing_large"
                                 android:tag="Purchase"
                                 android:onClick="onClick"
-                        >
+                                android:background="@color/grey_5">
 
                             <ImageView
                                     android:layout_width="35dp"
@@ -127,7 +126,7 @@
                                 android:orientation="vertical"
                                 android:padding="@dimen/spacing_large"
                                 android:tag="cashIn"
-                                android:onClick="onClick">
+                                android:onClick="onClick" android:background="#00D8D0D0">
 
                             <ImageView
                                     android:layout_width="35dp"
@@ -291,7 +290,7 @@
                                 android:padding="@dimen/spacing_large"
                                 android:tag="MobileBill"
                                 android:onClick="onClick"
-                        >
+                                android:background="@color/grey_5">
 
                             <ImageView
                                     android:layout_width="35dp"
@@ -338,14 +337,14 @@
                                 android:padding="@dimen/spacing_large"
                                 android:tag="MobileTopup"
                                 android:onClick="onClick"
-                                android:focusable="true">
+                                android:focusable="true" android:background="@color/grey_5">
 
                             <ImageView
                                     android:layout_width="35dp"
                                     android:layout_height="35dp"
                                     android:layout_marginBottom="@dimen/spacing_smlarge"
                                     android:layout_marginTop="@dimen/spacing_smlarge"
-                                    android:tint="@color/indigo_500"
+                                    android:tint="#101E79"
                                     app:srcCompat="@drawable/mobile"/>
 
                             <TextView
@@ -354,7 +353,7 @@
                                     android:text="@string/top_up"
                                     android:textAlignment="center"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                                    android:textColor="@color/grey_90"/>
+                                    android:textColor="#1C297F"/>
 
                         </LinearLayout>
 
