--- a/app/src/main/res/layout/activity_electric.xml
+++ b/app/src/main/res/layout/activity_electric.xml
@@ -15,148 +15,139 @@
             android:theme="?attr/actionBarTheme"
             android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar7" app:title="@string/electric"
             app:titleTextColor="#F9F9F9"/>
-    <androidx.core.widget.NestedScrollView
-            android:id="@+id/nested_scroll_view"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="none"
-            android:scrollingCache="true">
+            android:background="@color/background"
+            android:orientation="vertical">
+
+
+        <!--<androidx.cardview.widget.CardView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_margin="20dp"-->
+        <!--card_view:cardElevation="8dp"-->
+        <!--app:cardCornerRadius="5dp"-->
+        <!--android:background="#ffffff">-->
+
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/background"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:orientation="horizontal">
 
-
-            <!--<androidx.cardview.widget.CardView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_margin="20dp"-->
-                    <!--card_view:cardElevation="8dp"-->
-                    <!--app:cardCornerRadius="5dp"-->
-                    <!--android:background="#ffffff">-->
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:orientation="horizontal">
-
-                    <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="81dp"
-                            android:src="@drawable/ic_lightbulb"
-                            tools:srcCompat="@drawable/ic_lightbulb"
-                            android:contentDescription="@string/page_logo"/>
-
-
-                </LinearLayout>
-            <!--</androidx.cardview.widget.CardView>-->
-
-            <androidx.cardview.widget.CardView
+            <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    app:cardCornerRadius="5dp"
-                    card_view:cardElevation="9dp"
-                    android:layout_marginRight="20dp"
-
-                    android:background="@drawable/round_border">
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical" android:padding="15dp" >
-
-
-                    <TextView
-                            android:text="@string/meter"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" android:id="@+id/textView11"
-                            android:textAlignment="center" android:textColor="@android:color/black"
-                            android:textSize="18sp" android:textStyle="bold"/>
-                    <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" android:id="@+id/meterNoLayout"
-                            app:hintAnimationEnabled="false" app:hintEnabled="false">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/meter" android:inputType="number"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-                    <TextView
-                            android:text="@string/amount"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" android:id="@+id/textView13"
-                            android:textColor="@android:color/black" android:textSize="18sp" android:textStyle="bold"
-                            android:textAlignment="center"/>
-                    <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" android:id="@+id/amountEL"
-                            app:hintAnimationEnabled="false" app:hintEnabled="false">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/amount" android:inputType="number|numberDecimal"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/spacing_middle"
-                            android:text="@string/payment_options"
-                            android:textAlignment="center"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                            android:textColor="@color/grey_90"
-                            android:textStyle="bold"/>
-
-                    <Spinner
-                            android:id="@+id/paymentMethodSpinner"
-                            android:layout_width="match_parent"
-                            android:layout_height="58dp"
-                            android:layout_gravity="center"
-                            android:entries="@array/payment_method"
-                            android:prompt="@string/payment_method_prompt"/>
-
-                    <Button
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/proceed"
-                            android:textAllCaps="false"
-                            android:layout_marginTop="30dp"
-                            android:textColor="#ffffff"
-                            android:padding="15dp"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:background="@drawable/rounded_button"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp" android:id="@+id/proceedEL"/>
-
-                    <Button
-                            android:id="@+id/button"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/back"
-                            android:padding="15dp"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:background="@drawable/rounded_button2"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp"
-                            android:textAllCaps="false"
-                            android:layout_marginBottom="20dp"
-                    />
-
-
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
+                    android:layout_height="81dp"
+                    android:src="@drawable/ic_lightbulb"
+                    tools:srcCompat="@drawable/ic_lightbulb"
+                    android:contentDescription="@string/page_logo"/>
 
 
         </LinearLayout>
+        <!--</androidx.cardview.widget.CardView>-->
 
-    </androidx.core.widget.NestedScrollView>
+        <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                app:cardCornerRadius="5dp"
+                card_view:cardElevation="9dp"
+                android:layout_marginRight="20dp"
+
+                android:background="@drawable/round_border">
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" android:padding="15dp">
+
+
+                <TextView
+                        android:text="@string/meter"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" android:id="@+id/textView11"
+                        android:textAlignment="center" android:textColor="@android:color/black"
+                        android:textSize="18sp" android:textStyle="bold"/>
+                <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" android:id="@+id/meterNoLayout"
+                        app:hintAnimationEnabled="false" app:hintEnabled="false">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/meter" android:inputType="number"/>
+                </com.google.android.material.textfield.TextInputLayout>
+                <TextView
+                        android:text="@string/amount"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" android:id="@+id/textView13"
+                        android:textColor="@android:color/black" android:textSize="18sp" android:textStyle="bold"
+                        android:textAlignment="center"/>
+                <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" android:id="@+id/amountEL"
+                        app:hintAnimationEnabled="false" app:hintEnabled="false">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/amount" android:inputType="number|numberDecimal"/>
+                </com.google.android.material.textfield.TextInputLayout>
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_middle"
+                        android:text="@string/payment_options"
+                        android:textAlignment="center"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/grey_90"
+                        android:textStyle="bold"/>
+
+                <Spinner
+                        android:id="@+id/paymentMethodSpinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="58dp"
+                        android:layout_gravity="center"
+                        android:entries="@array/payment_method"
+                        android:prompt="@string/payment_method_prompt"/>
+
+                <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/proceed"
+                        android:textAllCaps="false"
+                        android:layout_marginTop="30dp"
+                        android:textColor="#ffffff"
+                        android:padding="15dp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:background="@drawable/rounded_button"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp" android:id="@+id/proceedEL"/>
+
+                <Button
+                        android:id="@+id/backButtonEL"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/back"
+                        android:padding="15dp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:background="@drawable/rounded_button2"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:textAllCaps="false"
+                        android:layout_marginBottom="20dp"
+                />
+
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+    </LinearLayout>
 
 </LinearLayout>
