--- a/app/src/main/res/layout/activity_mobile_bill.xml
+++ b/app/src/main/res/layout/activity_mobile_bill.xml
@@ -77,24 +77,13 @@
                             android:layout_height="match_parent"
                             android:textAppearance="@style/TextAppearance.Medium.Bold"
                             android:textColor="@android:color/black" android:textAlignment="center"/>
-                    <LinearLayout
+                    <Spinner
+                            android:id="@+id/telecomMethodSpinner"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="18dp"
-                            android:layout_marginRight="18dp"
-                            android:layout_marginTop="18dp"
-                            android:background="@drawable/round_border">
-
-
-                        <Spinner
-                                android:id="@+id/telecomMethodSpinner"
-                                android:layout_width="match_parent"
-                                android:layout_height="43dp"
-                                android:layout_gravity="center"
-                                android:entries="@array/mobile_providers"
-                                android:prompt="@string/moblie_providers_prompt"/>
-
-                    </LinearLayout>
+                            android:layout_height="43dp"
+                            android:layout_gravity="center"
+                            android:entries="@array/mobile_providers"
+                            android:prompt="@string/moblie_providers_prompt"/>
                     <TextView
                             android:text="@string/phone_number"
                             android:layout_width="match_parent"
@@ -145,7 +134,6 @@
                             android:layout_gravity="center"
                             android:entries="@array/payment_method"
                             android:prompt="@string/payment_method_prompt"/>
-
                     <Button
                             android:id="@+id/proceedBP"
                             android:layout_width="match_parent"
@@ -162,7 +150,7 @@
                             android:layout_marginRight="20dp"/>
 
                     <Button
-                            android:id="@+id/button"
+                            android:id="@+id/backButtonBP"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/back"
