--- a/app/src/main/res/layout/activity_purchase.xml
+++ b/app/src/main/res/layout/activity_purchase.xml
@@ -16,129 +16,121 @@
             android:theme="?attr/actionBarTheme"
             android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar3" app:title="@string/purchase"
             app:titleTextColor="#F9F9F9"/>
-    <androidx.core.widget.NestedScrollView
-            android:id="@+id/nested_scroll_view"
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="none"
-            android:scrollingCache="true">
+            android:layout_height="match_parent"
+            android:background="@color/background"
+            android:orientation="vertical" android:padding="10dp">
+
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/background"
-                android:orientation="vertical" android:padding="10dp">
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:orientation="horizontal">
 
-
-            <LinearLayout
+            <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:orientation="horizontal">
-
-                <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="81dp"
-                        android:src="@drawable/cashier"
-                        android:padding="15dp"/>
-
-
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    app:cardCornerRadius="5dp"
-                    card_view:cardElevation="9dp"
-                    android:layout_marginRight="20dp"
-
-                    android:background="@drawable/round_border">
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical" android:padding="15dp">
-
-
-                    <TextView
-                            android:text="@string/amount"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" android:id="@+id/textView3"
-                            android:textAlignment="center" android:textColor="@android:color/black"
-                            android:textStyle="bold" android:textSize="18sp"/>
-                    <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" android:animateLayoutChanges="false"
-                            android:animationCache="false" app:hintAnimationEnabled="false"
-                            app:hintEnabled="false" android:id="@+id/purcheseAmount">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/amount" android:textColorLink="@color/light_blue_700"
-                                android:textColorHighlight="@color/light_blue_700" android:inputType="number"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <View
-                            android:layout_width="0dp"
-                            android:layout_height="@dimen/spacing_smlarge"/>
-
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/spacing_middle"
-                            android:text="Payment Options"
-                            android:textAlignment="center"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                            android:textColor="@color/grey_90"
-                            android:textStyle="bold"/>
-                    <Spinner
-                            android:id="@+id/paymentMethodSpinner"
-                            android:layout_width="match_parent"
-                            android:layout_height="43dp"
-                            android:layout_gravity="center"
-                            android:entries="@array/payment_method"
-                            android:prompt="@string/payment_method_prompt"/>
-
-                    <Button
-                            android:id="@+id/purcheseProceed"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Proceed"
-                            android:textAllCaps="false"
-                            android:layout_marginTop="30dp"
-                            android:textColor="#ffffff"
-                            android:padding="15dp"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:background="@drawable/rounded_button"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp"/>
-
-                    <Button
-                            android:id="@+id/button"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Back"
-                            android:padding="15dp"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:background="@drawable/rounded_button2"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp"
-                            android:textAllCaps="false"
-                            android:layout_marginBottom="20dp"
-                    />
-
-
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+                    android:layout_height="81dp"
+                    android:src="@drawable/cashier"
+                    android:padding="15dp"/>
 
 
         </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
+        <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                app:cardCornerRadius="5dp"
+                card_view:cardElevation="9dp"
+                android:layout_marginRight="20dp"
+
+                android:background="@drawable/round_border">
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" android:padding="15dp">
+
+
+                <TextView
+                        android:text="@string/amount"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" android:id="@+id/textView3"
+                        android:textAlignment="center" android:textColor="@android:color/black"
+                        android:textStyle="bold" android:textSize="18sp"/>
+                <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" android:animateLayoutChanges="false"
+                        android:animationCache="false" app:hintAnimationEnabled="false"
+                        app:hintEnabled="false" android:id="@+id/purcheseAmount">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/amount" android:textColorLink="@color/light_blue_700"
+                            android:textColorHighlight="@color/light_blue_700"
+                            android:inputType="number|numberDecimal"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <View
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/spacing_smlarge"/>
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacing_middle"
+                        android:text="Payment Options"
+                        android:textAlignment="center"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/grey_90"
+                        android:textStyle="bold"/>
+                <Spinner
+                        android:id="@+id/paymentMethodSpin"
+                        android:layout_width="match_parent"
+                        android:layout_height="43dp"
+                        android:layout_gravity="center"
+                        android:entries="@array/payment_method"
+                        android:prompt="@string/payment_method_prompt"/>
+
+                <Button
+                        android:id="@+id/purcheseProceed"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Proceed"
+                        android:textAllCaps="false"
+                        android:layout_marginTop="30dp"
+                        android:textColor="#ffffff"
+                        android:padding="15dp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:background="@drawable/rounded_button"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"/>
+
+                <Button
+                        android:id="@+id/backBbuttonP"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Back"
+                        android:padding="15dp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:background="@drawable/rounded_button2"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:textAllCaps="false"
+                        android:layout_marginBottom="20dp"
+                />
+
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+    </LinearLayout>
 
 </LinearLayout>
