--- a/app/src/main/res/layout/activity_wallet_pay.xml
+++ b/app/src/main/res/layout/activity_wallet_pay.xml
@@ -15,12 +15,7 @@
             android:theme="?attr/actionBarTheme"
             android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar22" app:title="Wallet Pay"
             app:titleTextColor="#F9F9F9"/>
-    <androidx.core.widget.NestedScrollView
-            android:id="@+id/nested_scroll_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none"
-            android:scrollingCache="true">
+
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -29,15 +24,8 @@
                 android:orientation="vertical">
 
 
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:orientation="horizontal"/>
-            <!--</androidx.cardview.widget.CardView>-->
-
             <androidx.cardview.widget.CardView
+                    android:layout_marginTop="50dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -61,7 +49,7 @@
                             android:textColor="@android:color/black"/>
                     <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" android:id="@+id/phoneLayoutWP"
+                            android:layout_height="wrap_content" android:id="@+id/phoneLayoutWP"
                             app:hintAnimationEnabled="false" app:hintEnabled="false" android:animationCache="false"
                             android:animateLayoutChanges="false">
 
@@ -91,7 +79,7 @@
                             android:layout_marginRight="20dp" android:id="@+id/proceedWP"/>
 
                     <Button
-                            android:id="@+id/button"
+                            android:id="@+id/backBbuttonWP"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/back"
@@ -113,6 +101,5 @@
 
         </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
